tests/sksl/errors/ReservedNameSampler3DRect.glsl
### Compilation failed:

error: 1: 'sampler3DRect' is a reserved word
1 error
